@@ -1,3 +1,8 @@
+2010-01-22  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclExecute.c (TclExecuteByteCode): Improve error code
+	generation from some of the tailcall-related bits of TEBC.
+
 2010-01-21  Miguel Sofer  <msofer@users.sf.net>
 
 	* generic/tclCompile.h: NRE-enable direct eval on BC spoilage 
